<resources>
    <string name="app_name">ChopIn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="offerlist">Offers</string>
    <string name="addoffer">Add an offer</string>
    <string name="myoffer">My offers</string>
    <string name="mymap">Map</string>
    <string name="mychippedlist">Past orders</string>
    <string name="offer_name">Name</string>
    <string name="offer_name_hint">What are you going to cook?</string>
    <string name="offer_description_hint">Additional notes</string>
    <string name="offer_description">Description</string>
    <string name="offer_address_hint">Where will you be serving your dish?</string>
    <string name="offer_price">Price</string>
    <string name="offer_price_hint">Price per person</string>
    <string name="offer_how_many">How many?</string>
    <string name="offer_how_many_hint">How many people can you serve?</string>
    <string name="offer_address">Address</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">logout</string>
</resources>
