<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_OfferList"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/offerlist" />
        <item
            android:id="@+id/nav_AddOffer"
            android:icon="@android:drawable/ic_menu_more"
            android:title="@string/addoffer" />
        <item
            android:id="@+id/nav_MyOffer"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/myoffer" />
        <item

            android:id="@+id/nav_MyMap"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/mymap" />

        <item
            android:id="@+id/nav_MyChippedList"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/mychippedlist" />

    </group>

</menu>
